[project]
name = "rt-common"
version = "0.0.0"
classifiers = [
    "Private :: Do Not Upload",
    "Topic :: Utilities",
    "Typing :: Typed",
    "Framework :: AsyncIO"
]
dependencies = [
    "ipcs~=0.2.0",
    "typing_extensions>=4.7.1",
]
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
